--- a/Foodism/Base.lproj/Main.storyboard
+++ b/Foodism/Base.lproj/Main.storyboard
@@ -374,7 +374,7 @@
         <image name="search page final2" width="1548" height="2778"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="BPd-Qe-qrP"/>
+        <segue reference="hKb-fR-8ux"/>
         <segue reference="1eq-5f-xpz"/>
         <segue reference="uUN-pR-v5a"/>
     </inferredMetricsTieBreakers>
