--- a/Foodism/Base.lproj/LaunchScreen.storyboard
+++ b/Foodism/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="first pageeee.png" translatesAutoresizingMaskIntoConstraints="NO" id="Tmk-1X-hY9">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Tmk-1X-hY9" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="axc-SR-Xx2"/>
+                            <constraint firstItem="Tmk-1X-hY9" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="eWq-07-mCq"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Tmk-1X-hY9" secondAttribute="bottom" id="fYj-So-nbd"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Tmk-1X-hY9" secondAttribute="trailing" constant="-20" id="ref-Qu-h4B"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +36,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="first pageeee.png" width="1563" height="2779"/>
+    </resources>
 </document>
