--- a/Foodism/Base.lproj/Main.storyboard
+++ b/Foodism/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="hkY-f3-hFp">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.99326580190000002" blue="0.99534756229999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="0.99370823596517976" blue="0.97903241119987594" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="caD-jH-M3a">
                             <size key="itemSize" width="124" height="121"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -97,17 +97,20 @@
                                             <rect key="frame" x="-2" y="0.0" width="126" height="96"/>
                                         </imageView>
                                         <button opaque="NO" tag="2" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgJ-bG-Lg3">
-                                            <rect key="frame" x="38" y="91" width="46" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                            <rect key="frame" x="8" y="91" width="108" height="30"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="10"/>
+                                            <state key="normal" title="Button">
+                                                <color key="titleColor" red="0.081882588565349579" green="0.79048079252243042" blue="0.74338072538375854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </state>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
-                                <color key="backgroundColor" red="1" green="0.99326580190000002" blue="0.99534756229999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="hgJ-bG-Lg3" firstAttribute="leading" secondItem="EdZ-Xt-eDS" secondAttribute="leadingMargin" constant="30" id="B2n-hK-Jkt"/>
+                                    <constraint firstItem="hgJ-bG-Lg3" firstAttribute="leading" secondItem="EdZ-Xt-eDS" secondAttribute="leadingMargin" constant="5" id="B2n-hK-Jkt"/>
                                     <constraint firstAttribute="bottomMargin" secondItem="hgJ-bG-Lg3" secondAttribute="bottom" constant="-8" id="SND-F6-MHd"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="hgJ-bG-Lg3" secondAttribute="trailing" constant="31" id="WEf-Ab-EeK"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="hgJ-bG-Lg3" secondAttribute="trailing" constant="5" id="WEf-Ab-EeK"/>
                                     <constraint firstItem="hgJ-bG-Lg3" firstAttribute="top" secondItem="EdZ-Xt-eDS" secondAttribute="topMargin" constant="83" id="Zer-8A-ePl"/>
                                 </constraints>
                                 <connections>
@@ -242,7 +245,7 @@
                             <constraint firstItem="4a8-SS-s3s" firstAttribute="top" secondItem="ONf-cA-n52" secondAttribute="bottom" constant="34" id="SRk-AA-5HW"/>
                             <constraint firstItem="mcU-Or-wZU" firstAttribute="trailing" secondItem="hh6-Vd-xIg" secondAttribute="trailingMargin" id="UvN-6i-8LZ"/>
                             <constraint firstItem="bVy-Y5-czw" firstAttribute="trailing" secondItem="hh6-Vd-xIg" secondAttribute="trailingMargin" id="VYr-Wc-mqC"/>
-                            <constraint firstItem="5S4-5f-cE8" firstAttribute="leading" secondItem="QvU-MX-jmd" secondAttribute="trailing" constant="191" id="Wfe-HD-kUe"/>
+                            <constraint firstItem="5S4-5f-cE8" firstAttribute="leading" secondItem="QvU-MX-jmd" secondAttribute="trailing" constant="200" id="Wfe-HD-kUe"/>
                             <constraint firstItem="axQ-MA-cbD" firstAttribute="top" secondItem="OL6-kh-2OY" secondAttribute="bottom" constant="23" id="Ygt-WX-HfL"/>
                             <constraint firstItem="bVy-Y5-czw" firstAttribute="leading" secondItem="hh6-Vd-xIg" secondAttribute="leadingMargin" constant="-5" id="c3Z-BJ-u8q"/>
                             <constraint firstItem="axQ-MA-cbD" firstAttribute="leading" secondItem="hh6-Vd-xIg" secondAttribute="leadingMargin" id="fJe-SX-X17"/>
@@ -409,7 +412,7 @@
         <image name="search page final2" width="1548" height="2778"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="wfZ-5t-MH5"/>
         <segue reference="UBl-vc-0bn"/>
-        <segue reference="sVE-w2-e8w"/>
     </inferredMetricsTieBreakers>
 </document>
